# Voice-Anime-Fighter

./: .gitignore  API 명세서.md  README.md  docker-compose.yml  optimize_images.py
backend/: .env.example  Dockerfile  config.py  main.py  pyproject.toml  requirements.txt
backend/adapters/: __init__.py
backend/adapters/api/routes/: auth.py  battle.py  characters.py  rooms.py  users.py
backend/adapters/db/: database.py  models.py  repository.py
backend/adapters/redis/: __init__.py  battle_state.py
backend/adapters/socket/: __init__.py  handlers.py
backend/domain/: entities.py  repositories.py
backend/scripts/: migrate_db.py
backend/use_cases/: __init__.py  battle_service.py  ranking_service.py  room_service.py
certbot/: init-letsencrypt.sh
frontend/: .env  Dockerfile  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.jsx  index.css  main.jsx
frontend/src/components/: BattleCharacter.jsx  EnergyChargeEffect.jsx  ErrorModal.jsx  KeyMashGame.jsx  ProtectedRoute.jsx
frontend/src/data/: battleBackgrounds.js  characterSkills.js
frontend/src/hooks/: api.js  useAudioVisualizer.js  useBattleCharacter.js  useOtakuAudio.js  useSocket.js  useSpeechRecognition.js
frontend/src/screens/: BackgroundSelectScreen.jsx  BattleScreen.jsx  CharacterSelectScreen.jsx  LobbyScreen.jsx  MatchmakingScreen.jsx  MultiCharacterSelect.jsx  ResultScreen.jsx  SocialScreen.jsx  TitleScreen.jsx
frontend/src/stores/: battleStore.js  errorStore.js  gameStore.js  userStore.js
frontend/src/utils/: errorHandler.js  (+1 more)
nginx/: nginx.conf
